# flint

./: .env  .env.example  .gitignore  DOCKER_COMPOSE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
src/flare-ai-kit/: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  deploy-tee.sh  pyproject.toml
src/flare-ai-kit/.github/: dependabot.yml
src/flare-ai-kit/.github/workflows/: agent-validation.yml  lint.yml  test.yml  validate-pr-title.yml
src/flare-ai-kit/agents/: __init__.py  ingest_pdf.py
src/flare-ai-kit/agents/data/: __init__.py  create_sample_invoice.py
src/flare-ai-kit/docs/: a2a_readme.md  da_layer_readme.md  docker_agents_guide.md  fassets_testing_guide.md  turnkey_wallet_readme.md
src/flare-ai-kit/examples/: 01_get_ftso_price.py  02_da_layer_usage.py  03_fassets_basic.py  04_verify_fassets_implementation.py  05_ingest_pdf.py  06_turnkey_wallet_integration.py  07_rag_vector_demo.py
src/flare-ai-kit/examples/a2a/a2a_collaboration/: ftso_agent.py  orchestrator_agent.py  price_analysis_agent.py
src/flare-ai-kit/examples/a2a/messaging/: ping_pong.py
src/flare-ai-kit/examples/data/: create_sample_invoice.py
src/flare-ai-kit/src/flare_ai_kit/: config.py  main.py
src/flare-ai-kit/src/flare_ai_kit/a2a/: __init__.py  client.py  schemas.py  server.py  settings.py  task_management.py
src/flare-ai-kit/src/flare_ai_kit/abis/: FtsoV2.json
src/flare-ai-kit/src/flare_ai_kit/agent/: ecosystem_tools.py  pdf_tools.py  settings.py
src/flare-ai-kit/src/flare_ai_kit/agent/tools/: __init__.py
src/flare-ai-kit/src/flare_ai_kit/agents/: __init__.py  turnkey.py
src/flare-ai-kit/src/flare_ai_kit/common/: schemas.py
src/flare-ai-kit/src/flare_ai_kit/consensus/aggregator/: base.py  strategies.py
src/flare-ai-kit/src/flare_ai_kit/consensus/communication/: base.py  channels.py
src/flare-ai-kit/src/flare_ai_kit/consensus/coordinator/: __init__.py  simple.py
src/flare-ai-kit/src/flare_ai_kit/consensus/management/: dynamic.py
src/flare-ai-kit/src/flare_ai_kit/consensus/resolution/: base.py  detectors.py  resolvers.py
src/flare-ai-kit/src/flare_ai_kit/ecosystem/: api.py  explorer.py  flare.py  settings.py
src/flare-ai-kit/src/flare_ai_kit/ecosystem/protocols/: da_layer.py  fassets.py  ftsov2.py
src/flare-ai-kit/src/flare_ai_kit/ingestion/: __init__.py  github_ingestor.py  pdf_processor.py  settings.py
src/flare-ai-kit/src/flare_ai_kit/onchain/: __init__.py  contract_poster.py
src/flare-ai-kit/src/flare_ai_kit/rag/graph/: settings.py
src/flare-ai-kit/src/flare_ai_kit/rag/vector/: factory.py  settings.py
src/flare-ai-kit/src/flare_ai_kit/social/: settings.py  telegram.py  x.py
src/flare-ai-kit/src/flare_ai_kit/social/connector/: __init__.py  farcaster.py  slack.py  x.py
src/flare-ai-kit/src/flare_ai_kit/tee/: __init__.py  api.py  attestation.py  validation.py
src/flare-ai-kit/src/flare_ai_kit/wallet/: __init__.py  base.py  permissions.py  tee_security.py  turnkey_wallet.py
src/flare-ai-kit/tests/: test_consensus_engine.py
src/flare-ai-kit/tests/integration/ecosystem/: test_explorer.py
src/flare-ai-kit/tests/integration/ecosystem/protocols/: test_fassets.py  test_ftsov2.py
src/flare-ai-kit/tests/unit/agents/: test_turnkey.py
src/flare-ai-kit/tests/unit/consensus/: test_coordinator.py
src/flare-ai-kit/tests/unit/ecosystem/: settings_dummy.py  test_explorer.py
src/flare-ai-kit/tests/unit/wallet/: __init__.py  test_permissions.py  test_turnkey_wallet.py
(+141 files in other folders)
